--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -33,12 +33,14 @@ body {
   font-weight: 400;
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222;
+  
 }
 
 .content {
    background-color: #F2F3F4;
    padding-top: 5%;
    padding-bottom: 5%;
+   height: 100%;
 }
 
 .container {
